--- a/clearwater/templates/index.html
+++ b/clearwater/templates/index.html
@@ -1,12 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}
-	Welcome
+	Water Records | Welcome
 {% endblock %}
 
 {% block content %}
 	hello world
-	<div id="logout">
-		<a href="/logout">Logout</a>
-	</div>
 {% endblock %}
