--- a/clearwater/templates/base.html
+++ b/clearwater/templates/base.html
@@ -2,28 +2,53 @@
 <html>
 <head>
 	{% block head %}
+		<link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/static/css/styles.css">
 		<script src="/static/js/scripts.js"></script>
-		<title>{% block title %}{% endblock %}</title>
+		<title>{% block title %}Water Records{% endblock %}</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	{% endblock %}
 </head>
 <body>
-	{% with messages = get_flashed_messages() %}
-		{% if messages %}
-			<ul class="flashes">
-				{% for message in messages %}
-					<li>{{ message }}</li>
-				{% endfor %}
-			</ul>
-		{% endif %}
-	{% endwith %}
-	
-	<div id="content">{% block content %}{% endblock %}</div>
-	
-	<div id="footer">
-		{% block footer %}
-			&copy; Copyright 2015 T&amp;W.
-		{% endblock %}
+	<div class="container">
+		{% with messages = get_flashed_messages() %}
+			{% if messages %}
+				<ul class="flashes">
+					{% for message in messages %}
+						<li>{{ message }}</li>
+					{% endfor %}
+				</ul>
+			{% endif %}
+		{% endwith %}
 	</div>
+	
+	<nav class="navbar navbar-default">
+		<div class="container">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="/">Water Records</a>
+			</div>
+			<div id="navbar" class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li><a href="/">Home</a></li>
+					<li><a href="/users">Users</a></li>
+					<li><a href="/measurements">Measurements</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="/logout">Logout</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	
+	<div class="container" id="content">{% block content %}{% endblock %}</div>
+	
+	<footer class="footer">
+		<div class="container">
+			{% block footer %}
+				<p>&copy; Copyright 2015 T&amp;W.</p>
+			{% endblock %}
+		</div>
+	</footer>
 </body>
 </html>
