--- a/clearwater/templates/login.html
+++ b/clearwater/templates/login.html
@@ -1,13 +1,55 @@
-{% extends 'base.html' %}
-
-{% block content %}
-	{% if session['logged_in'] %}
-		<p>You're already logged in.</p>
-	{% else %}
-		<form action="/login" method="POST">
-			<input type="username" name="username" placeholder="Username">
-			<input type="password" name="password" placeholder="Password">
-			<input type="submit" value="Log in">
-		</form>
-	{% endif %}
-{% endblock %}
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/static/css/styles.css">
+	<script src="/static/js/scripts.js"></script>
+	<title>Water Records | Log In</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style>
+		body {
+			padding-top: 40px;
+			padding-bottom: 40px;
+			background-color: #eee;
+		}
+		
+		input[type="password"] {
+			margin-bottom: 10px;
+		}
+	</style>
+</head>
+<body>
+	<div class="container">
+		{% with messages = get_flashed_messages() %}
+			{% if messages %}
+				<ul class="flashes">
+					{% for message in messages %}
+						<li>{{ message }}</li>
+					{% endfor %}
+				</ul>
+			{% endif %}
+		{% endwith %}
+	</div>
+	
+	<div class="container" id="content">
+		{% if session['logged_in'] %}
+			<p>You're already logged in.</p>
+		{% else %}
+			<form class="form-signin" action="/login" method="POST">
+				<input class="form-control" type="username" name="username" placeholder="Username" required autofocus>
+				<input class="form-control" type="password" name="password" placeholder="Password" required>
+				<button class="btn btn-lg btn-primary btn-block" type="submit">Log In</button>
+			</form>
+		{% endif %}
+	</div>
+	
+	<footer class="footer">
+		<div class="container">
+			{% block footer %}
+				<p>&copy; Copyright 2015 T&amp;W.</p>
+			{% endblock %}
+		</div>
+	</footer>
+</body>
+</html>
