--- a/clearwater/templates/base.html
+++ b/clearwater/templates/base.html
@@ -5,6 +5,8 @@
 		<link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/static/css/styles.css">
+		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script src="/static/js/bootstrap.min.js"></script>
 		<script src="/static/js/scripts.js"></script>
 		<title>{% block title %}Water Records{% endblock %}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,8 +37,16 @@
 					<li><a href="/measurements">Measurements</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/logout">Logout</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+							Signed in as {{ current_user.username }}<span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu">
+							<li><a href="/logout">Logout</a></li>
+						</ul>
+					</li>
 				</ul>
+				<!-- <p class="navbar-text navbar-right"></p> -->
 			</div>
 		</div>
 	</nav>
