--- a/clearwater/templates/login.html
+++ b/clearwater/templates/login.html
@@ -13,10 +13,6 @@
 			padding-bottom: 40px;
 			background-color: #eee;
 		}
-		
-		input[type="password"] {
-			margin-bottom: 10px;
-		}
 	</style>
 </head>
 <body>
@@ -39,6 +35,12 @@
 			<form class="form-signin" action="/login" method="POST">
 				<input class="form-control" type="username" name="username" placeholder="Username" required autofocus>
 				<input class="form-control" type="password" name="password" placeholder="Password" required>
+				<input type="hidden" name="next" value="{{ nxt }}">
+				<div class="checkbox">
+					<label>
+						<input type="checkbox" name="rememberme">Remember me
+					</label>
+				</div>
 				<button class="btn btn-lg btn-primary btn-block" type="submit">Log In</button>
 			</form>
 		{% endif %}
