bugfixes and added test plan

--- a/clearwater/templates/login.html
+++ b/clearwater/templates/login.html
@@ -20,7 +20,10 @@
 <body>
 	{% with messages = get_flashed_messages(with_categories=true) %}
 		{% if messages %}
-			<div class="container alert alert-{{ messages[0][0] }}" id="flash">
+			<div class="container alert alert-{{ messages[0][0] }} alert-dismissible fade in" id="flash">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
 				<ul class="flashes">
 					{% for category,message in messages %}
 						<li>{{ message }}</li>
