--- a/clearwater/templates/base.html
+++ b/clearwater/templates/base.html
@@ -15,8 +15,10 @@
 <body>
 	{% with messages = get_flashed_messages(with_categories=true) %}
 		{% if messages %}
-			{# TODO: don't hard code warning class - pass in other colors #}
-			<div class="container alert alert-{{ messages[0][0] }}" id="flash">
+			<div class="container alert alert-{{ messages[0][0] }} alert-dismissible fade in" id="flash">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
 				<ul class="flashes">
 					{% for category,message in messages %}
 						<li>{{ message }}</li>
@@ -47,7 +49,6 @@
 						</ul>
 					</li>
 				</ul>
-				<!-- <p class="navbar-text navbar-right"></p> -->
 			</div>
 		</div>
 	</nav>
