--- a/clearwater/templates/404.html
+++ b/clearwater/templates/404.html
@@ -1,3 +1,8 @@
 {% extends 'base.html' %}
 
-{# TODO #}
+{% block content %}
+	<h1>404 - Page Not Found</h1>
+	<p>
+		The requested URL was not found. Check your spelling and try again or <a href="/">return home</a>
+	</p>
+{% endblock %}
