--- a/clearwater/templates/base.html
+++ b/clearwater/templates/base.html
@@ -39,16 +39,18 @@
 					<li><a href="/users">Users</a></li>
 					<li><a href="/measurements">Measurements</a></li>
 				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-							Signed in as {{ current_user.username }}<span class="caret"></span>
-						</a>
-						<ul class="dropdown-menu">
-							<li><a href="/logout">Logout</a></li>
-						</ul>
-					</li>
-				</ul>
+				{% if current_user.is_authenticated() %}
+					<ul class="nav navbar-nav navbar-right">
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+								Signed in as {{ current_user.username }}<span class="caret"></span>
+							</a>
+							<ul class="dropdown-menu">
+								<li><a href="/logout">Logout</a></li>
+							</ul>
+						</li>
+					</ul>
+				{% endif %}
 			</div>
 		</div>
 	</nav>
