--- a/clearwater/templates/login.html
+++ b/clearwater/templates/login.html
@@ -40,7 +40,7 @@
 			<form class="form-signin" action="/login" method="POST">
 				<input class="form-control" type="username" name="username" placeholder="Username" required autofocus>
 				<input class="form-control" type="password" name="password" placeholder="Password" required>
-				<input type="hidden" name="next" value="{{ nxt }}">
+				<input type="hidden" name="next" value="{{ nxt or '' }}">
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" name="rememberme">Remember me
