Image, fixed login bug

--- a/clearwater/templates/index.html
+++ b/clearwater/templates/index.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block content %}
-	hello world
+	<img class="img-responsive img-center" src="/static/img/aquarium.jpg" alt="Aquarium">
 {% endblock %}
