--- a/clearwater/static/css/styles.css
+++ b/clearwater/static/css/styles.css
@@ -15,7 +15,12 @@
 	border-radius: 0;
 }
 
+.img-center {
+	margin: 0 auto;
+}
+
 .footer {
+	margin-top: 15px;
 	text-align: center;
 	font-size: small;
 }
