--- a/clearwater/templates/measurements.html
+++ b/clearwater/templates/measurements.html
@@ -9,6 +9,7 @@
 			Add Measurement<span class="caret"></span>
 		</a>
 		<form class="dropdown-menu" id="add-measurement-dropdown" action="/measurements" method="POST">
+			{# TODO: make datetime more browser/user friendly #}
 			<input class="form-control" type="datetime-local" step="1" name="time" required autofocus>
 			<input class="form-control" type="number" step="any" name="ph" placeholder="pH" required>
 			<button class="btn btn-primary center-block" type="submit">Add</button>
