CSV upload support, string reformatting, nav active tabs

--- a/clearwater/templates/400.html
+++ b/clearwater/templates/400.html
@@ -3,6 +3,6 @@
 {% block content %}
 	<h1>400 - Bad Request</h1>
 	<p>
-		The browser (or proxy) sent a request that this server could not understand. Try again or <a href="/">return home</a>
+		The browser (or proxy) sent a request that this server could not understand. Try again or <a href="/">return home</a>.
 	</p>
 {% endblock %}
