--- a/clearwater/templates/404.html
+++ b/clearwater/templates/404.html
@@ -3,6 +3,6 @@
 {% block content %}
 	<h1>404 - Page Not Found</h1>
 	<p>
-		The requested URL was not found. Check your spelling and try again or <a href="/">return home</a>
+		The requested URL was not found. Check your spelling and try again or <a href="/">return home</a>.
 	</p>
 {% endblock %}
