--- a/clearwater/static/css/styles.css
+++ b/clearwater/static/css/styles.css
@@ -7,6 +7,10 @@
 	text-align: center;
 }
 
+.flashes li:not(:first-child) {
+	margin-top: 15px;
+}
+
 #flash {
 	width: 300px;
 }
@@ -37,12 +41,12 @@
 /*
 * USERS & MEASUREMENTS
 */
-#add-user-dropdown, #add-measurement-dropdown {
+.dropdown-form {
 	padding: 15px;
 	margin: 0 25px;
 }
 
-#add-user-dropdown input, #add-measurement-dropdown input {
+.dropdown-form input {
 	margin-bottom: 10px;
 }
 
