--- a/clearwater/templates/base.html
+++ b/clearwater/templates/base.html
@@ -28,6 +28,12 @@
 		{% endif %}
 	{% endwith %}
 	
+	{% set navbar = [
+			('/', 'home', 'Home'),
+			('/users', 'users', 'Users'),
+			('/measurements', 'measurements', 'Measurements')
+		]
+	%}
 	<nav class="navbar navbar-default">
 		<div class="container">
 			<div class="navbar-header">
@@ -35,9 +41,11 @@
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li><a href="/">Home</a></li>
-					<li><a href="/users">Users</a></li>
-					<li><a href="/measurements">Measurements</a></li>
+					{% for href, id, label in navbar %}
+						<li {% if id == active_page %} class="active" {% endif %}>
+							<a href="{{ href }}">{{ label }}</a>
+						</li>
+					{% endfor %}
 				</ul>
 				{% if current_user.is_authenticated() %}
 					<ul class="nav navbar-nav navbar-right">
