--- a/clearwater/templates/users.html
+++ b/clearwater/templates/users.html
@@ -9,10 +9,12 @@
 			$('#users-table').DataTable( {
 				"autoWidth": false,
 				"columnDefs": [ {
+				{% if current_user.isAdmin() %}
 					"targets": [2],
 					"searchable": false,
 					"orderable": false
 				}, {
+				{% endif %}
 					"targets": [0],
 					"visible": false
 				} ],
