--- a/clearwater/templates/users.html
+++ b/clearwater/templates/users.html
@@ -39,8 +39,10 @@
 					Add User<span class="caret"></span>
 				</a>
 				<form class="dropdown-menu dropdown-form" action="/users" method="POST">
-					<input class="form-control" type="username" name="username" placeholder="Username" required autofocus>
-					<input class="form-control" type="password" name="password" placeholder="Password" required>
+					<label for="username">Username</label>
+					<input id="username" class="form-control" type="username" name="username" placeholder="Username" required autofocus>
+					<label for="password">Password</label>
+					<input id="password" class="form-control" type="password" name="password" placeholder="Password" required>
 					<button class="btn btn-primary center-block" type="submit">Add</button>
 				</form>
 			</div>
