adding 3 columns to measurement model, rebranding

--- a/clearwater/templates/base.html
+++ b/clearwater/templates/base.html
@@ -8,7 +8,7 @@
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 		<script src="/static/js/bootstrap.min.js"></script>
 		<script src="/static/js/scripts.js"></script>
-		<title>{% block title %}Water Records{% endblock %}</title>
+		<title>{% block title %}Santa Cruz Aquaponics{% endblock %}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	{% endblock %}
 </head>
@@ -37,7 +37,7 @@
 	<nav class="navbar navbar-default">
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="/">Water Records</a>
+				<a class="navbar-brand" href="/">Aquaponics</a>
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
