--- a/clearwater/templates/login.html
+++ b/clearwater/templates/login.html
@@ -7,7 +7,7 @@
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="/static/js/bootstrap.min.js"></script>
 	<script src="/static/js/scripts.js"></script>
-	<title>Water Records | Log In</title>
+	<title>Santa Cruz Aquaponics</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
 		body {
