--- a/clearwater/templates/login.html
+++ b/clearwater/templates/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="shortcut icon" href="/static/img/favicon.ico">
 	<link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/static/css/styles.css">
