python3 compatibility update

--- a/clearwater/templates/base.html
+++ b/clearwater/templates/base.html
@@ -48,7 +48,7 @@
 						</li>
 					{% endfor %}
 				</ul>
-				{% if current_user.is_authenticated() %}
+				{% if current_user.is_authenticated %}
 					<ul class="nav navbar-nav navbar-right">
 						<li class="dropdown">
 							<a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
